feat(swagger): add OpenAPI attributes for all V3 endpoints
